# android-project-build-tool

./: .gitignore  Cargo.toml  README.md  abt-wrapper.sh  build.settings.gradle.kts  build.zig  flake.nix  settings.gradle.kts
.github/workflows/: rust.yml  zig.yml
lib/regez/: regez.h
src/: api.rs  error.rs  main.rs  main.zig  regez.c
src/domain/: auth.rs  build.rs  create.rs  mod.rs  open.rs  projects.rs  pullrequest.rs  users.rs
src/util/: mod.rs  shell.rs  vc.rs
