[package]
name = "abt"
version = "0.8.0"
authors = ["Qi, Bob <baobin.qi@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
globwalk = "0.8"
structopt = "0.3"
log = "0.4"
simple_logger = "1.9"
reqwest = "0.9"
rpassword = "4.0"
serde_json = "1.0"
dirs = "2.0"
git2 = "0.13"
openssl = { version = "0.10", features = ["vendored"] }
openssl-probe = "0.1"
rayon = "1.5"
